--- a/public/home.html
+++ b/public/home.html
@@ -11,7 +11,7 @@
 var car = {type:"Fiat", model:"500", color:"white"};
 
 // Display some data from the object:
-document.getElementById("demo").innerHTML = "The car type is " + car.type;
+document.getElementById("demo").innerHTMl = "The car type is " + car.type;
 </script>
 
 </body>
