--- a/public/home.html
+++ b/public/home.html
@@ -2,14 +2,15 @@
 <html>
 <body>
 
-<h2>Witaj in JavaScript class!</h2>
+<h2>Witaj in Advanced JavaScript class presenting mushrooms finder!</h2>
 
 
 <form method="POST" action="/search">
-    <input type=hidden name="hush" val="hidden, but not secret!">
+<!-- if you want another value you could add: 
+<input type=hidden name="hush" val="hidden, but not secret!">-->
         <div>
             <label for="mashName">Find following mushroom:</label>
-            <input type="text" id="mashName" name="mushroom">
+            <input type="text" id="mashName" name="name">
         </div>
         <div>
             <button type="submit">Submit</button>
@@ -18,3 +19,4 @@
 
 </body>
 </html>
+
