a7 conv. to SPA

--- a/public/about2.html
+++ b/public/about2.html
@@ -7,3 +7,49 @@
 
 </body>
 </html>
+
+***** ITC230 - Advanced Javascript *****
+
+--- Week 1: Node.js Up and Running ---
+- Launch a Node.js Web Server that can respond to request
+- Create a package.json
+- Display home.html on Web Browser if it is requested (http://localhost:3000)
+- Display about iformation if it is requested (http://localhost:3000/about)
+- Display "404:Page Not Found" if the path is not available.
+
+--- Week 2: Node.js with Modulars (index.js)---
+- Create get, getAll, delete, and find functions to return an item in JSON book collection
+
+--- Week 3: Introduction to Express (index.js)---
+- Convert previous assignment to Express synxtax
+- Remove unecessary if condition cases
+
+--- Week 4: Quality Assurance ---
+/**
+*   --save: dependecies of working project
+*   --save-dev: developer dependecies, not related to working project.    
+*/
+1. Syntax Checking
+- Eslint: npm install -g eslint; eslint --init
+(optional: may have to install standard format globally)
+
+2. Testing
+- mocha (npx mocha test/** || npm mocha)
+- chai
+
+--- Week 5: MongoDB Atlas (index.js) ---
+- create a non-commit confidential to store database login information 
+- integrate moongoose with MongoDB to index.js
+- update views and layout
+
+
+--- Week 6: RESTful API's & Scraping ---
+- Enhanced index.js application to handle REST API request
+- Moved routes to  routes.js to help index.js clean and maintainable
+- Created a small HTML submit form to test REST API
+- Set Access-Control-Allow-Origin header for API routes
+
+--- Week 7: Converting to Single Page Application with ReactJS ---
+-
+-
+-
