--- a/public/about2.html
+++ b/public/about2.html
@@ -51,5 +51,6 @@
 
 --- Week 7: Converting to Single Page Application with ReactJS ---
 -
--
--
+-- week 8 adding UI to SPA(buttons and functionality) REACT CRUD
+call: node index.js
+
